--- a/pages/footer.html
+++ b/pages/footer.html
@@ -18,17 +18,49 @@
     {
       text-decoration: none;
     }
+.footer-logo {
+  display: flex;
+  flex-direction: column;     /* stack logo rows vertically */
+  align-items: center;        /* center rows horizontally */
+  gap: 20px;                  /* space between rows */
+  text-align: center;
+}
+
+.footer-logo img {
+  width: 60px;                /* consistent size */
+  height: auto;               /* keep proportions */
+  object-fit: contain;        /* no stretching */
+  margin: 0 10px;             /* spacing between logos */
+  transition: transform 0.3s ease;
+}
+
+.footer-logo img:hover {
+  transform: scale(1.1);      /* subtle zoom on hover */
+}
+
+.logo-1,
+.logo-2 {
+  display: flex;
+  justify-content: center;    /* center logos in row */
+  align-items: center;
+  gap: 20px;                  /* space between each logo */
+}
+.secure
+{
+  height: 200px;
+}
+
   </style>
   
   </head>
   <body>
 
     <footer class="text-white pt-5" style="background-color:#0a165a;">
-  <div class="container">
+  <div class="ml-5 mr-5">
     <div class="row">
-      
+
       <!-- About Us -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-3 mb-4">
         <h5 class="fw-bold mb-3">ABOUT US</h5>
         <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
         <p>
@@ -40,7 +72,7 @@
       </div>
 
       <!-- Company Links -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-3 mb-4">
         <h5 class="fw-bold mb-3">COMPANY LINKS</h5>
         <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
         <ul class="list-unstyled d-flex">
@@ -61,8 +93,23 @@
         </ul>
       </div>
 
+<div class="col-md-3 footer-logo text-center">
+  <div class="logo-1 mb-3">
+    <img src="../images/100.png" alt="100%" class="img-fluid" style="height:60px; width:auto; margin:5px;">
+    <img src="../images/95-Accuracy.png" alt="95%" class="img-fluid" style="height:60px; width:auto; margin:5px;">
+    <img src="../images/bbb+.webp" alt="BBB" class="img-fluid" style="height:60px; width:auto; margin:5px;">
+  </div>  
+
+  <div class="logo-2">
+    <img src="../images/GDPR.png" alt="GDPR" class="img-fluid" style="height:50px; width:auto; margin:5px;">
+    <img src="../images/secure-1.png" alt="Secure" class="img-fluid" style="height:80px; width:auto; margin:5px;"> 
+    <img src="../images/can-span.png" alt="CAN-SPAM" class="img-fluid" style="height:60px; width:50px; margin:5px;">
+  </div>
+</div>
+
+
       <!-- Contact Info -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-3 mb-4">
         <h5 class="fw-bold mb-3">CONTACT INFO</h5>
         <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
         <p><strong>Address:</strong> 3524 SILVERSIDE ROAD SUITE 35B<br>WILMINGTON, DELAWARE 19810-4929</p>
@@ -75,8 +122,8 @@
   <!-- Bottom Bar -->
   <div class="text-center py-3 mt-3 border-top" style="border-color: rgba(255,255,255,0.2) !important;">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <p class="mb-0">© 2022 ALL RIGHTS RESERVED.</p>
-      <p class="mb-0"><a href="#" class="text-white text-decoration-none">TERMS AND CONDITIONS</a> | <a href="#" class="text-white text-decoration-none">PRIVACY POLICY</a></p>
+      <p class="mb-0">© 2022 All Rights Reserved.</p>
+      <p class="mb-0"><a href="#" class="text-white text-decoration-none">Terms and Conditions</a> | <a href="#" class="text-white text-decoration-none">Privacy Policy</a></p>
     </div>
   </div>
 </footer>
